--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 </head>
 <body>
 
-    <header class="purple-gradient text-white pt-8 pb-6 px-6 shadow-2xl text-center rounded-b-[40px] border-b-4 border-[#D4AF37] relative overflow-hidden">
+   <header class="purple-gradient text-white pt-8 pb-6 px-6 shadow-2xl text-center rounded-b-[40px] border-b-4 border-[#D4AF37] relative overflow-hidden">
         <div class="absolute inset-0 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]"></div>
         
         <div class="relative z-10">
             <div class="flex justify-center mb-4">
-                 <img src="Logo%20of%20Cherry%20Directory%20by%20ST.png" alt="Cherry Directory Logo" 
-                     class="w-36 h-36 rounded-3xl border-4 border-[#FFD700]/80 shadow-2xl object-cover bg-[#37006a]">
+                 <div class="w-28 h-28 rounded-full border-4 border-[#FFD700] shadow-xl bg-white/10 backdrop-blur-sm flex items-center justify-center">
+                    <i class="fa-solid fa-location-dot text-5xl text-[#FFD700] drop-shadow-md"></i>
+                 </div>
             </div>
             
             <h1 id="pageTitle" class="text-3xl font-bold tracking-wider text-gold drop-shadow-md font-['Pyidaungsu']">Home</h1>
